force-app/main/default/objects/StartDateSettings__mdt/StartDateSettings__mdt.object-meta.xml
<CustomObject>
    <description>In this setting we will store all the off set rules for different markets for different cases</description>
    <label>Start Date Settings</label>
    <pluralLabel>StartDateSettings</pluralLabel>
</CustomObject>