force-app/main/default/objects/StartDateSettings__mdt/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <description>Destination code will be stored in this field</description>
    <label>Destination Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>