force-app/main/default/objects/StartDateSettings__mdt/fields/EndDateOffSet__c.field-meta.xml
<CustomField>
    <fullName>EndDateOffSet__c</fullName>
    <description>End Date off set for product</description>
    <label>EndDate Off-Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>