force-app/main/default/objects/StartDateSettings__mdt/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>All the product Code will be stored in this field</description>
    <label>Product Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>