force-app/main/default/objects/StartDateSettings__mdt/fields/ProductSubType__c.field-meta.xml
<CustomField>
    <fullName>ProductSubType__c</fullName>
    <description>All the product sub types which follows start date rules will be stored in comma seperated string</description>
    <label>Product Sub Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>