force-app/main/default/objects/StartDateSettings__mdt/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>All the product Types will be stored in this field</description>
    <label>Product Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>