force-app/main/default/objects/StartDateSettings__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This field is used o specify the program for which the settings is used for</description>
    <label>Program</label>
    <type>TextArea</type>
</CustomField>