force-app/main/default/objects/StartDateSettings__mdt/fields/StartDateOffSet__c.field-meta.xml
<CustomField>
    <fullName>StartDateOffSet__c</fullName>
    <description>Start Date off set for product</description>
    <label>StartDate Off-Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>