force-app/main/default/objects/StartDateSettings__mdt/fields/ValidAccommodationDays__c.field-meta.xml
<CustomField>
    <fullName>ValidAccommodationDays__c</fullName>
    <description>This Field is used to Specify Valid Accommodation days
Ex:FRIDAY,SATURDAY,SUNDAY</description>
    <label>Valid Accommodation Days</label>
    <length>200</length>
    <type>Text</type>
</CustomField>